--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "stylelint-config-standard": "^18.3.0",
     "stylelint-scss": "^3.9.0",
     "webpack": "^4.29.6",
-    "webpack-blocks": "^2.0.0-rc",
+    "webpack-blocks": "^2.1.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
     "write-file-webpack-plugin": "^4.5.0"
